<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnSurface"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/select_image_from"
            android:textColor="?attr/colorOnBackground"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#8B0C3C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:id="@+id/layoutCemera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cameraBtn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_blue"
                    android:padding="20dp"
                    android:src="@drawable/ic_camera_white"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutGallary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/galleryBtn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_blue"
                    android:padding="20dp"
                    android:src="@drawable/ic_gallary_white"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>